New notebook for analyses

--- a/notebooks/reports/OpenAI/5.2.1_ChatGPT_prompt_readings.ipynb
+++ b/notebooks/reports/OpenAI/5.2.1_ChatGPT_prompt_readings.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                               \r"
+      "                                                                         \r"
      ]
     }
    ],
@@ -176,15 +176,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prompt_results_dict"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -203,6 +194,12 @@
     "file = \"DF_Andrei.csv\"\n",
     "df_Andrei = pd.read_csv(F\"{root}{file}\", header=[0, 1], index_col=0)\\\n",
     "    .rename_axis('Species', axis='index')\n",
+    "df_Andrei = df_Andrei.rename(columns={'Thorns/spines': 'Thorns spines', \n",
+    "                                      'Sepals / calyx shape': 'Sepals calyx shape', \n",
+    "                                      'Petals / corolla shape': 'Petals corolla shape',\n",
+    "                                      'Petals / corolla number': 'Petals corolla number',\n",
+    "                                      'Petals / corolla colour': 'Petals corolla colour',\n",
+    "                                      'Sepals / calyx numer': 'Sepals calyx numer',})\n",
     "df_Andrei_species = list(df_Andrei.index)\n",
     "\n",
     "\n",
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,363 +245,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 58,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "species = \"Amyris ignea\"\n",
-    "df_Andrei_ChatGPT = pd.DataFrame(index=pd.MultiIndex.from_tuples(df_Andrei.columns)).T\n",
-    "\n",
-    "ground_truth_traits = extract_ALL_traits(species, df_Andrei)\n",
-    "for trait, value in ground_truth_traits.items():\n",
-    "    # print(trait)\n",
-    "    try:\n",
-    "        ChatGPT_result = prompt_results_dict[species][trait]\n",
-    "        correct_values = list(set(value) & set(ChatGPT_result))\n",
-    "        # print(prompt_results_dict[species][trait])\n",
-    "        # print(value)\n",
-    "        # print(correct_values, trait)\n",
-    "        for correct_value in correct_values:\n",
-    "            df_Andrei_ChatGPT.loc[species, (trait, correct_value)] = 1 \n",
-    "    except:\n",
-    "        continue\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th colspan=\"2\" halign=\"left\">Life form</th>\n",
-       "      <th colspan=\"5\" halign=\"left\">Leaf position</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">Leaf composition</th>\n",
-       "      <th>...</th>\n",
-       "      <th colspan=\"4\" halign=\"left\">Aril colour</th>\n",
-       "      <th colspan=\"6\" halign=\"left\">Seed colour</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>liana</th>\n",
-       "      <th>tree</th>\n",
-       "      <th>alternate</th>\n",
-       "      <th>alternate, opposite</th>\n",
-       "      <th>opposite</th>\n",
-       "      <th>opposite, whorls of 3</th>\n",
-       "      <th>opposite, whorls of 3, alternate</th>\n",
-       "      <th>3 palmate</th>\n",
-       "      <th>3-5 palmate</th>\n",
-       "      <th>3-5 pinnate</th>\n",
-       "      <th>...</th>\n",
-       "      <th>orange</th>\n",
-       "      <th>red</th>\n",
-       "      <th>white</th>\n",
-       "      <th>yellow-geen</th>\n",
-       "      <th>black</th>\n",
-       "      <th>brown</th>\n",
-       "      <th>green</th>\n",
-       "      <th>grey</th>\n",
-       "      <th>white</th>\n",
-       "      <th>whitish</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Amyris ignea</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 202 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             Life form      Leaf position                               \\\n",
-       "                 liana tree     alternate alternate, opposite opposite   \n",
-       "Amyris ignea       NaN  1.0           NaN                 NaN      NaN   \n",
-       "\n",
-       "                                                                     \\\n",
-       "             opposite, whorls of 3 opposite, whorls of 3, alternate   \n",
-       "Amyris ignea                   NaN                              NaN   \n",
-       "\n",
-       "             Leaf composition                          ... Aril colour      \\\n",
-       "                    3 palmate 3-5 palmate 3-5 pinnate  ...      orange red   \n",
-       "Amyris ignea              NaN         NaN         NaN  ...         NaN NaN   \n",
-       "\n",
-       "                               Seed colour                                 \n",
-       "             white yellow-geen       black brown green grey white whitish  \n",
-       "Amyris ignea   NaN         NaN         NaN   NaN   NaN  NaN   NaN     NaN  \n",
-       "\n",
-       "[1 rows x 202 columns]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_Andrei_ChatGPT"
+    "### Caribbean "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "defaultdict(dict,\n",
-       "            {'Amyris ignea': {'Petals corolla shape': ['tubular'],\n",
-       "              'Petals corolla colour': ['yellow',\n",
-       "               'white',\n",
-       "               'pink',\n",
-       "               'white',\n",
-       "               'pink',\n",
-       "               'purple'],\n",
-       "              'Sepals calyx shape': ['None of the above'],\n",
-       "              'Leaf position': ['None of the above'],\n",
-       "              'Leaf margin': ['crenate', 'serrate'],\n",
-       "              'Inflorescence type': ['panicle'],\n",
-       "              'Seed colour': ['None of the above'],\n",
-       "              'Leaf glands': ['translucent oil cells'],\n",
-       "              'Stipules': ['None of the above (Information about the Stipules trait was not mentioned in the text.)'],\n",
-       "              'Sepals calyx numer': ['4-5'],\n",
-       "              'Fruit colour': ['green'],\n",
-       "              'Leaf upper side': ['glabrous', 'pubescent'],\n",
-       "              'Thornsspines': ['absent'],\n",
-       "              'Life form': ['tree'],\n",
-       "              'Leaf rachis': ['None of the above'],\n",
-       "              'Leaf shape': ['elliptic',\n",
-       "               'other: size and texture varied among species'],\n",
-       "              'Fruit shape': ['ovoid', 'globose'],\n",
-       "              'Stamen shape': ['None of the above'],\n",
-       "              'Petals corolla number': ['5'],\n",
-       "              'Stamen number': ['10'],\n",
-       "              'Leaf lower side': [\"None of the above (the 'Leaf lower side' trait is not described in terms of the options provided).\"],\n",
-       "              'Fruit type': ['capsule'],\n",
-       "              'Aril colour': [\"None of the above. The text did not mention any specific values for the 'Aril colour' trait.\"],\n",
-       "              'Leaf composition': ['5-11 pinnate']},\n",
-       "             'Avicennia germinans': {'Petals corolla shape': ['rounded',\n",
-       "               'tubular'],\n",
-       "              'Petals corolla colour': ['white'],\n",
-       "              'Sepals calyx shape': ['cup-shaped', 'deeply 5-lobed'],\n",
-       "              'Leaf position': ['opposite'],\n",
-       "              'Leaf margin': ['entire'],\n",
-       "              'Inflorescence type': ['spike'],\n",
-       "              'Seed colour': ['None of the above'],\n",
-       "              'Leaf glands': ['translucent oil cells'],\n",
-       "              'Stipules': ['None of the above'],\n",
-       "              'Sepals calyx numer': ['5'],\n",
-       "              'Fruit colour': ['green'],\n",
-       "              'Leaf upper side': ['dark green',\n",
-       "               'smooth',\n",
-       "               'leathery',\n",
-       "               'salt crystals'],\n",
-       "              'Thornsspines': ['absent'],\n",
-       "              'Life form': ['tree'],\n",
-       "              'Leaf rachis': ['None of the above. (The Leaf rachis trait is not mentioned in the text.)'],\n",
-       "              'Leaf shape': ['opposite',\n",
-       "               'simple',\n",
-       "               'evergreen',\n",
-       "               'leathery',\n",
-       "               'elliptical to obovate'],\n",
-       "              'Fruit shape': ['Egg-shaped'],\n",
-       "              'Stamen shape': ['short', 'shorter than corolla'],\n",
-       "              'Petals corolla number': ['White', \"4 petaled flowers'] -> ['4\"],\n",
-       "              'Stamen number': ['There is no mention of the Stamen number trait in the text.'],\n",
-       "              'Leaf lower side': ['silvery hairy'],\n",
-       "              'Fruit type': ['capsule'],\n",
-       "              'Aril colour': ['None of the above. The trait of aril colour is not mentioned in the text.'],\n",
-       "              'Leaf composition': ['Opposite',\n",
-       "               'simple',\n",
-       "               'evergreen',\n",
-       "               'leathery',\n",
-       "               'elliptical to obovate',\n",
-       "               '2 to 5 inches long',\n",
-       "               'dark green above',\n",
-       "               'silvery hairy below',\n",
-       "               'may have salt deposits on their upper surfaces due to salt excretion.']},\n",
-       "             'Bursera simaruba': {'Petals corolla shape': ['None of the above'],\n",
-       "              'Petals corolla colour': ['None of the above'],\n",
-       "              'Sepals calyx shape': ['None of the above'],\n",
-       "              'Leaf position': ['spirally arranged\\'] - The description mentions \"the leaves are spirally arranged and pinnate with 7-11 leaflets',\n",
-       "               '\" but none of the above options match this exactly.'],\n",
-       "              'Leaf margin': ['entire'],\n",
-       "              'Inflorescence type': ['panicle'],\n",
-       "              'Leaf glands': ['None of the above'],\n",
-       "              'Stipules': ['absent', 'present'],\n",
-       "              'Sepals calyx numer': ['3-5'],\n",
-       "              'Fruit colour': ['red'],\n",
-       "              'Leaf upper side': ['shiny', 'glabrous'],\n",
-       "              'Thornsspines': ['absent'],\n",
-       "              'Life form': ['tree'],\n",
-       "              'Leaf rachis': ['pinnate', 'not winged'],\n",
-       "              'Leaf shape': ['ovate to oblong'],\n",
-       "              'Fruit shape': ['elliptic'],\n",
-       "              'Stamen shape': ['None of the above'],\n",
-       "              'Petals corolla number': ['pale green or white',\n",
-       "               'Other: color not synonymous with petals/corolla'],\n",
-       "              'Stamen number': ['6-9'],\n",
-       "              'Leaf lower side': ['shiny and green on top',\n",
-       "               'paler green underneath'],\n",
-       "              'Fruit type': ['capsule', 'drupe', 'Other: 3-angled'],\n",
-       "              'Leaf composition': ['odd-pinnately compound']},\n",
-       "             'Bourreria succulenta': {'Petals corolla shape': ['salverform'],\n",
-       "              'Petals corolla colour': ['white'],\n",
-       "              'Sepals calyx shape': ['connate'],\n",
-       "              'Leaf position': ['alternate'],\n",
-       "              'Leaf margin': ['entire'],\n",
-       "              'Inflorescence type': ['cymes'],\n",
-       "              'Seed colour': ['None of the above'],\n",
-       "              'Leaf glands': ['absent'],\n",
-       "              'Stipules': ['present'],\n",
-       "              'Sepals calyx numer': [\"5 fused sepals forming a tube'] -> ['5\"],\n",
-       "              'Fruit colour': ['orange-red'],\n",
-       "              'Leaf upper side': ['smooth shiny green'],\n",
-       "              'Thornsspines': ['absent'],\n",
-       "              'Life form': ['tree'],\n",
-       "              'Leaf rachis': ['not winged'],\n",
-       "              'Leaf shape': ['spatulate'],\n",
-       "              'Fruit shape': ['berry that turns orange-red at maturity'],\n",
-       "              'Stamen shape': ['fused to the corolla',\n",
-       "               'alternate with the petals'],\n",
-       "              'Petals corolla number': ['5'],\n",
-       "              'Stamen number': ['5'],\n",
-       "              'Leaf lower side': ['smooth', 'pale green', 'pubescent'],\n",
-       "              'Fruit type': ['berry'],\n",
-       "              'Aril colour': ['orange', 'red'],\n",
-       "              'Leaf composition': ['entire']}})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prompt_results_dict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "df_Andrei[[\"Life form\", \"Leaf position\"]].head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame.from_dict(prompt_results_dict, orient='index')\n",
-    "# df = df.apply(pd.Series.explode)\n",
-    "df[[\"Petals corolla shape\", \"Petals corolla colour\"]].head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in df.columns:\n",
-    "    df = df.explode(col)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dummies = pd.get_dummies(df, prefix=df.columns, prefix_sep='')\n",
-    "dummies"
+    "# Create an empty DataFrame with a multi-level index based on the columns of another DataFrame\n",
+    "df_Andrei_ChatGPT = pd.DataFrame(index=pd.MultiIndex.from_tuples(df_Andrei.columns)).T\n",
+    "\n",
+    "# Loop through each species in a dictionary of ground truth traits\n",
+    "for species in prompt_results_dict.keys():\n",
+    "\n",
+    "    # Extract the ground truth traits for the current species from a DataFrame\n",
+    "    ALL_traits = extract_ALL_traits(species, df_Andrei)\n",
+    "\n",
+    "    # Loop through each trait and its corresponding value in the ground truth traits\n",
+    "    for trait, value in ALL_traits.items():\n",
+    "\n",
+    "        # print(trait, 'Correct')\n",
+    "        ChatGPT_result = prompt_results_dict[species][trait]\n",
+    "\n",
+    "        # Find the correct values by finding the intersection between the ground truth values and the ChatGPT result\n",
+    "        correct_values = list(set(value) & set(ChatGPT_result))\n",
+    "\n",
+    "        # Set a value of 1 in the DataFrame for each correct value for the current species and trait\n",
+    "        for correct_value in correct_values:\n",
+    "            df_Andrei_ChatGPT.loc[species, (trait, correct_value)] = 1 \n",
+    "\n",
+    "folder_prompt_results = \"../../../data/OpenAI/PromptsAnalysesData/\"\n",
+    "\n",
+    "df_Andrei_ChatGPT.to_csv(F\"{folder_prompt_results}caribbean_df_ChatGPT.csv\")\n",
+    "df_Andrei.loc[df_Andrei_ChatGPT.index].to_csv(F\"{folder_prompt_results}.caribbean_df_GT.csv\")"
    ]
   }
  ],
