updated NaN value results

--- a/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait.ipynb
+++ b/notebooks/reports/OpenAI/5.1.1_ChatGPT_prompting_per_species_per_trait.ipynb
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,36 +434,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<OpenAIObject chat.completion id=chatcmpl-6wYHk9rgD4cv1IYDPe0DdoIlAatz8 at 0x7fbe20d3f7e0> JSON: {\n",
+       "<OpenAIObject chat.completion id=chatcmpl-6wYbIrdUPWFLMMxVP3o0iu3ck6MYH at 0x7fbe20d3cd10> JSON: {\n",
        "  \"choices\": [\n",
        "    {\n",
        "      \"finish_reason\": \"stop\",\n",
        "      \"index\": 0,\n",
        "      \"message\": {\n",
-       "        \"content\": \"[(berry, 0), (capsule, 1), (drupe, 0), (fleshy drupe, NA), (follicle, 0), (nutlet, 0), (pod, 1)]\",\n",
+       "        \"content\": \"\\n\\n[('NA?', 'NA'), ('orange', 'NA'), ('red', '0'), ('white', 'NA'), ('yellow-green', 'NA')]\",\n",
        "        \"role\": \"assistant\"\n",
        "      }\n",
        "    }\n",
        "  ],\n",
-       "  \"created\": 1679412836,\n",
-       "  \"id\": \"chatcmpl-6wYHk9rgD4cv1IYDPe0DdoIlAatz8\",\n",
+       "  \"created\": 1679414048,\n",
+       "  \"id\": \"chatcmpl-6wYbIrdUPWFLMMxVP3o0iu3ck6MYH\",\n",
        "  \"model\": \"gpt-3.5-turbo-0301\",\n",
        "  \"object\": \"chat.completion\",\n",
        "  \"usage\": {\n",
-       "    \"completion_tokens\": 52,\n",
-       "    \"prompt_tokens\": 1179,\n",
-       "    \"total_tokens\": 1231\n",
+       "    \"completion_tokens\": 33,\n",
+       "    \"prompt_tokens\": 1185,\n",
+       "    \"total_tokens\": 1218\n",
        "  }\n",
        "}"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
