--- a/notebooks/reports/OpenAI/1.0_urls_google.ipynb
+++ b/notebooks/reports/OpenAI/1.0_urls_google.ipynb
@@ -143,7 +143,34 @@
        " 'Attalea cohune',\n",
        " 'Attalea dahlgreniana',\n",
        " 'Attalea geraensis',\n",
-       " 'Attalea maripa']"
+       " 'Attalea maripa',\n",
+       " 'Attalea oleifera',\n",
+       " 'Attalea phalerata',\n",
+       " 'Attalea septuagenata',\n",
+       " 'Attalea speciosa',\n",
+       " 'Attalea tessmannii',\n",
+       " 'Attalea vitrivir',\n",
+       " 'Bactris dianeura',\n",
+       " 'Bactris gastoniana',\n",
+       " 'Bactris gracilior',\n",
+       " 'Bactris grayumii',\n",
+       " 'Bactris hirta',\n",
+       " 'Bactris horridispatha',\n",
+       " 'Bactris kunorum',\n",
+       " 'Bactris longiseta',\n",
+       " 'Bactris macroacantha',\n",
+       " 'Bactris major',\n",
+       " 'Bactris oligocarpa',\n",
+       " 'Bactris pilosa',\n",
+       " 'Bactris ptariana',\n",
+       " 'Bactris setosa',\n",
+       " 'Bactris setulosa',\n",
+       " 'Bactris turbinocarpa',\n",
+       " 'Balaka seemannii',\n",
+       " 'Balaka streptostachys',\n",
+       " 'Basselinia pancheri',\n",
+       " 'Basselinia tomentosa',\n",
+       " 'Bismarckia nobilis']"
       ]
      },
      "execution_count": 6,
@@ -198,19 +225,46 @@
       "Attalea cohune done\n",
       "Attalea dahlgreniana done\n",
       "Attalea geraensis done\n",
-      "Attalea maripa done\n"
+      "Attalea maripa done\n",
+      "Attalea oleifera done\n",
+      "Attalea phalerata done\n",
+      "Attalea septuagenata done\n",
+      "Attalea speciosa done\n",
+      "Attalea tessmannii done\n",
+      "Attalea vitrivir done\n",
+      "Bactris dianeura done\n",
+      "Bactris gastoniana done\n",
+      "Bactris gracilior done\n",
+      "Bactris grayumii done\n",
+      "Bactris hirta done\n",
+      "Bactris horridispatha done\n",
+      "Bactris kunorum done\n",
+      "Bactris longiseta done\n",
+      "Bactris macroacantha done\n",
+      "Bactris major done\n",
+      "Bactris oligocarpa done\n",
+      "Bactris pilosa done\n",
+      "Bactris ptariana done\n",
+      "Bactris setosa done\n",
+      "Bactris setulosa done\n",
+      "Bactris turbinocarpa done\n",
+      "Balaka seemannii done\n",
+      "Balaka streptostachys done\n",
+      "Basselinia pancheri done\n",
+      "Basselinia tomentosa done\n",
+      "Bismarckia nobilis done\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 16%|█▌        | 53/333 [00:50<04:24,  1.06it/s]\n"
+      " 24%|██▍       | 81/333 [00:41<02:08,  1.96it/s]\n"
      ]
     },
     {
      "ename": "HttpError",
-     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Bismarckia+nobilis+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
+     "evalue": "<HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Chamaedorea+pochutlensis+&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
@@ -219,7 +273,7 @@
       "Cell \u001b[0;32mIn[3], line 9\u001b[0m, in \u001b[0;36mgoogle_search\u001b[0;34m(search_term, api_key, cse_id, **kwargs)\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mCreates a search link for the custom Google search.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      8\u001b[0m service \u001b[39m=\u001b[39m build(\u001b[39m\"\u001b[39m\u001b[39mcustomsearch\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mv1\u001b[39m\u001b[39m\"\u001b[39m, developerKey\u001b[39m=\u001b[39mapi_key)\n\u001b[0;32m----> 9\u001b[0m res \u001b[39m=\u001b[39m service\u001b[39m.\u001b[39;49mcse()\u001b[39m.\u001b[39;49mlist(q\u001b[39m=\u001b[39;49msearch_term, cx\u001b[39m=\u001b[39;49mcse_id, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\u001b[39m.\u001b[39;49mexecute()\n\u001b[1;32m     10\u001b[0m \u001b[39mreturn\u001b[39;00m res[\u001b[39m'\u001b[39m\u001b[39mitems\u001b[39m\u001b[39m'\u001b[39m]\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/_helpers.py:130\u001b[0m, in \u001b[0;36mpositional.<locals>.positional_decorator.<locals>.positional_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    128\u001b[0m     \u001b[39melif\u001b[39;00m positional_parameters_enforcement \u001b[39m==\u001b[39m POSITIONAL_WARNING:\n\u001b[1;32m    129\u001b[0m         logger\u001b[39m.\u001b[39mwarning(message)\n\u001b[0;32m--> 130\u001b[0m \u001b[39mreturn\u001b[39;00m wrapped(\u001b[39m*\u001b[39;49margs, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n",
       "File \u001b[0;32m~/Documents/Wageningen University/Period 0 - GRS 70424 Internship/venv/lib/python3.9/site-packages/googleapiclient/http.py:938\u001b[0m, in \u001b[0;36mHttpRequest.execute\u001b[0;34m(self, http, num_retries)\u001b[0m\n\u001b[1;32m    936\u001b[0m     callback(resp)\n\u001b[1;32m    937\u001b[0m \u001b[39mif\u001b[39;00m resp\u001b[39m.\u001b[39mstatus \u001b[39m>\u001b[39m\u001b[39m=\u001b[39m \u001b[39m300\u001b[39m:\n\u001b[0;32m--> 938\u001b[0m     \u001b[39mraise\u001b[39;00m HttpError(resp, content, uri\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39muri)\n\u001b[1;32m    939\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpostproc(resp, content)\n",
-      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Bismarckia+nobilis+diagnosis&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
+      "\u001b[0;31mHttpError\u001b[0m: <HttpError 429 when requesting https://customsearch.googleapis.com/customsearch/v1?q=Chamaedorea+pochutlensis+&cx=13a87041f5a6df559&key=AIzaSyAiKMet5uvNWBKxmPC3OurJRs2amYdJaFA&alt=json returned \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\". Details: \"[{'message': \"Quota exceeded for quota metric 'Queries' and limit 'Queries per day' of service 'customsearch.googleapis.com' for consumer 'project_number:830720044910'.\", 'domain': 'global', 'reason': 'rateLimitExceeded'}]\">"
      ]
     }
    ],
