--- a/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
+++ b/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,26 @@
     "    # combine words with capitalization for each part\n",
     "    parts = [''.join(word.capitalize() for word in part.split()) for part in parts]\n",
     "    # join the parts with an empty string\n",
-    "    return ''.join(parts)"
+    "    return ''.join(parts)\n",
+    "\n",
+    "def create_clean_paragraphs(input_dict):\n",
+    "\n",
+    "    # Create a new dictionary to store the cleaned-up values\n",
+    "    output_dict = {}\n",
+    "    \n",
+    "    # Loop through the keys and values of the input dictionary\n",
+    "    for key, value in input_dict.items():\n",
+    "        # Convert the list of values to a set to remove duplicates\n",
+    "        unique_values = set(value)\n",
+    "        \n",
+    "        # Join the sentences together into a single string\n",
+    "        combined_string = ' '.join(unique_values)\n",
+    "        \n",
+    "        # Add the cleaned-up string to the output dictionary\n",
+    "        output_dict[key] = combined_string\n",
+    "    \n",
+    "    # Return the cleaned-up dictionary\n",
+    "    return output_dict"
    ]
   },
   {
@@ -135,79 +154,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "paragraph_folder = \"../../../data/OpenAI/DescriptionSnippets/Paragraphs/\"\n",
-    "sentence_folder = \"../../../data/OpenAI/DescriptionSnippets/Sentences/\"\n",
+    "folder_sents = \"../../../data/OpenAI/DescriptionSnippets/SentencesOriginal/\"\n",
     "\n",
-    "caribbean_jsons_paras = glob.glob(F\"{paragraph_folder}c*\")\n",
-    "caribbean_jsons_sents = glob.glob(F\"{sentence_folder}c*\")\n",
-    "\n",
-    "caribbean_jsons_paras.sort()\n",
-    "caribbean_jsons_sents.sort()"
+    "caribbean_file = \"Sents_Caribbean.pkl\"\n",
+    "caribbean_sents = pickle.load(open(F\"{folder_sents}{caribbean_file}\", 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'../../../data/OpenAI/DescriptionSnippets/Paragraphs/caribbean_Amyris_ignea_descriptions_paragraphs.json'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "caribbean_jsons_paras[0]"
+    "caribbean_paras = create_clean_paragraphs(caribbean_sents)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_list = ['Avicennia germinans', \n",
+    "            #  'Metopium brownei', \n",
+    "            #  'Handroanthus billbergii', \n",
+    "            #  'Bourreria succulenta', \n",
+    "             'Bursera karsteniana']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                              \r"
+      "                                                                       \r"
      ]
     }
    ],
    "source": [
     "# Define the path to the directory where the prompts and results will be saved\n",
-    "folder_prompts = \"../../../data/OpenAI/PromptsResults/\"\n",
+    "folder_prompts = \"../../../data/OpenAI/PromptsResults/OriginalData/\"\n",
     "\n",
     "choices = [\n",
     "    1, 0, \n",
     "]\n",
     "\n",
     "# Loop over each JSON file in the list caribbean_jsons_paras\n",
-    "for idx, json_file in enumerate(caribbean_jsons_paras[1:2]):\n",
+    "for idx, (species, text) in enumerate(caribbean_paras.items()):\n",
     "\n",
-    "    try:\n",
-    "        # Try to read in the JSON file\n",
-    "        with open(json_file, 'r') as f:\n",
-    "            caribbean_species_paragraph = json.load(f)\n",
-    "        \n",
-    "        # Get the name of the species from the keys of the dictionary in the JSON file\n",
-    "        species = list(caribbean_species_paragraph.keys())[0]\n",
-    "    except:\n",
-    "        # If the JSON file cannot be read in, get the name of the species from the file name\n",
-    "        species = json_file[62:-29].replace('_', ' ')\n",
+    "    if species not in test_list:\n",
     "        continue\n",
     "    \n",
-    "    # Join the paragraphs for the species into a single text string\n",
-    "    text = \" \".join(caribbean_species_paragraph[species])\n",
-    "\n",
     "    # Replace spaces in the species name with underscores\n",
     "    folder_species = species.replace(' ', '_')\n",
     "\n",
@@ -222,8 +227,6 @@
     "        pbar.set_description(f\"{idx}: {species}\")\n",
     "\n",
     "        # Create the question and options for the ChatGPT prompt\n",
-    "\n",
-    "\n",
     "        question = F\"Which of the following values correctly describe(s) the '{trait}' trait mentioned in the text? Fill in a '1', if the trait value is likely to occur based on the text, '0' if it is unlikely to occur and 'NA' if there is no information that can be used to infer the occurrence of the trait.\"\n",
     "        format = F\"\\nPlease ONLY return a Python list of tuples with ALL the options/value combinations from the list with options, like this: [({trait_options[0]}, {random.choice(choices)}), (({trait_options[1]}, {random.choice(choices)}))]\"\n",
     "        options = F\"\\nThe possible values for this trait are: {trait_options}.\"\\\n",
@@ -238,20 +241,20 @@
     "            continue\n",
     "\n",
     "        # Create the messages to send to the ChatGPT API\n",
-    "        # messages = [\n",
-    "        #     {\"role\": \"assistant\", \"content\": text},\n",
-    "        #     {\"role\": \"user\", \"content\": user_content}\n",
-    "        #     ]\n",
-    "        # # Call the ChatGPT API to generate a completion for the prompt\n",
-    "        # completion = openai.ChatCompletion.create(\n",
-    "        #     model = \"gpt-3.5-turbo\",\n",
-    "        #     messages = messages,\n",
-    "        # )\n",
+    "        messages = [\n",
+    "            {\"role\": \"assistant\", \"content\": text},\n",
+    "            {\"role\": \"user\", \"content\": user_content}\n",
+    "            ]\n",
+    "        # Call the ChatGPT API to generate a completion for the prompt\n",
+    "        completion = openai.ChatCompletion.create(\n",
+    "            model = \"gpt-3.5-turbo\",\n",
+    "            messages = messages,\n",
+    "        )\n",
     "\n",
     "\n",
-    "        # # Save the completion to a JSON file with the file name in the species directory\n",
-    "        # with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
-    "        #     json.dump(completion, fp)\n",
+    "        # Save the completion to a JSON file with the file name in the species directory\n",
+    "        with open(F\"{folder_prompts}{folder_species}/{file_name}.json\", 'w') as fp:\n",
+    "            json.dump(completion, fp)\n",
     "            \n"
    ]
   },
