--- a/notebooks/reports/OpenAI/5.2.2_ChatGPT_prompt_readings_new_prompt.ipynb
+++ b/notebooks/reports/OpenAI/5.2.2_ChatGPT_prompt_readings_new_prompt.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
     "\n",
     "        # If NaN\n",
     "        if ChatGPT_result == 'NA':\n",
-    "            df_Andrei_ChatGPT.loc[species, (trait)] = np.NAN\n",
+    "            df_Andrei_ChatGPT.loc[species, (trait)] = -1\n",
     "            continue\n",
     "\n",
     "        # Find the correct values by finding the intersection between the ground truth values and the ChatGPT result\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "0.0"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -437,43 +437,43 @@
        "      <th>Bursera karsteniana</th>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Avicennia germinans</th>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -489,33 +489,33 @@
       "text/plain": [
        "                    Life form      Leaf position                               \\\n",
        "                        liana tree     alternate alternate, opposite opposite   \n",
-       "Bursera karsteniana       0.0  1.0           NaN                 NaN      NaN   \n",
-       "Avicennia germinans       0.0  1.0           NaN                 NaN      NaN   \n",
+       "Bursera karsteniana       0.0  1.0          -1.0                -1.0     -1.0   \n",
+       "Avicennia germinans       0.0  1.0          -1.0                -1.0     -1.0   \n",
        "\n",
        "                                                                            \\\n",
        "                    opposite, whorls of 3 opposite, whorls of 3, alternate   \n",
-       "Bursera karsteniana                   NaN                              NaN   \n",
-       "Avicennia germinans                   NaN                              NaN   \n",
+       "Bursera karsteniana                  -1.0                             -1.0   \n",
+       "Avicennia germinans                  -1.0                             -1.0   \n",
        "\n",
        "                    Leaf composition                          ... Aril colour  \\\n",
        "                           3 palmate 3-5 palmate 3-5 pinnate  ...      orange   \n",
-       "Bursera karsteniana              NaN         NaN         NaN  ...         NaN   \n",
-       "Avicennia germinans              0.0         0.0         0.0  ...         NaN   \n",
+       "Bursera karsteniana             -1.0        -1.0        -1.0  ...        -1.0   \n",
+       "Avicennia germinans              0.0         0.0         0.0  ...        -1.0   \n",
        "\n",
-       "                                          Seed colour                         \\\n",
-       "                    red white yellow-geen       black brown green grey white   \n",
-       "Bursera karsteniana NaN   NaN         NaN         NaN   NaN   NaN  NaN   NaN   \n",
-       "Avicennia germinans NaN   NaN         NaN         1.0   1.0   0.0  0.0   1.0   \n",
+       "                                           Seed colour                         \\\n",
+       "                     red white yellow-geen       black brown green grey white   \n",
+       "Bursera karsteniana -1.0  -1.0        -1.0        -1.0  -1.0  -1.0 -1.0  -1.0   \n",
+       "Avicennia germinans -1.0  -1.0        -1.0         1.0   1.0   0.0  0.0   1.0   \n",
        "\n",
        "                             \n",
        "                    whitish  \n",
-       "Bursera karsteniana     NaN  \n",
+       "Bursera karsteniana    -1.0  \n",
        "Avicennia germinans     1.0  \n",
        "\n",
        "[2 rows x 202 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
