updated ingore and tested

--- a/notebooks/reports/surveys/1.0_survey_analyses.ipynb
+++ b/notebooks/reports/surveys/1.0_survey_analyses.ipynb
@@ -9412,7 +9412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 136,
    "id": "b4fe199a",
    "metadata": {},
    "outputs": [
@@ -11943,11 +11943,11 @@
     "\n",
     "fig.show()\n",
     "\n",
-    "# folder_figures = \"../../../reports/figures/\"\n",
-    "# file_name = \"PxPlot_HTML_SurveysPerDataset_PerTrait_Grouped.html\"\n",
-    "# fig.write_html(F\"{folder_figures}{file_name}\")\n",
-    "# file_name = \"PxPlot_PDF_SurveysPerTrait_PerTrait_Grouped.pdf\"\n",
-    "# fig.write_image(F\"{folder_figures}{file_name}\")"
+    "folder_figures = \"../../../reports/figures/\"\n",
+    "file_name = \"PxPlot_HTML_SurveysPerDataset_PerTrait_Grouped.html\"\n",
+    "fig.write_html(F\"{folder_figures}{file_name}\")\n",
+    "file_name = \"PxPlot_PDF_SurveysPerTrait_PerTrait_Grouped.pdf\"\n",
+    "fig.write_image(F\"{folder_figures}{file_name}\")"
    ]
   }
  ],
