--- a/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
+++ b/notebooks/reports/OpenAI/5.1.2_ChatGPT_prompting_per_species_per_trait_sentences_original.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,27 +175,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "test_list = ['Avicennia germinans', \n",
-    "            #  'Metopium brownei', \n",
-    "            #  'Handroanthus billbergii', \n",
-    "            #  'Bourreria succulenta', \n",
+    "             'Metopium brownei', \n",
+    "             'Handroanthus billbergii', \n",
+    "             'Bourreria succulenta', \n",
     "             'Bursera karsteniana']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                       \r"
+      "                                                                        \r"
      ]
     }
    ],
